[FIX] prevent line-wrapping of labels in search view when browser window too small
lp bug: https://launchpad.net/bugs/898539 fixed

bzr revid: xmo@openerp.com-20111201094611-dmzfrn95o5qv0bk5

--- a/addons/web/static/src/css/base.css
+++ b/addons/web/static/src/css/base.css
@@ -681,6 +681,7 @@ label.error {
 .openerp .oe-searchview-render-line .oe_label, .openerp .oe-searchview-render-line .oe_label_help {
     font-weight: bold;
     font-size: 80%;
+    white-space: nowrap;
 }
 
 .openerp .searchview_extended_group {
